[project]
name = "toxic-comment-classification"
version = "0.1.0"
description = "Toxic Comment Classification Service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4==4.13.4",
    "en-core-web-sm",
    "fastapi==0.121.2",
    "joblib==1.4.2",
    "lxml>=6.0.2",
    "nltk==3.9.2",
    "numpy==2.1.3",
    "pandarallel==1.6.5",
    "pandas==2.2.3",
    "pydantic==2.12.4",
    "scikit-learn==1.6.1",
    "spacy==3.8.8",
    "uvicorn==0.38.0",
]

[dependency-groups]
dev = [
    "requests>=2.32.5",
]

[tool.uv.sources]
en-core-web-sm = { path = "en_core_web_sm-3.8.0-py3-none-any.whl" }
